<resources>
    <string name="app_name">ResolveAí</string>
    <string name="action_settings">Settings</string>
    <string name="visualizar_problemas">Visualizar Problemas</string>
    <string name="adicionar_problema">Adicionar Problema</string>
    <string name="salvar">Salvar</string>
    <string name="descri_o">Descrição</string>
    <string name="infraestrutura">Infraestrutura</string>
    <string name="tr_nsito">Trânsito</string>
    <string name="seguran_a">Segurança</string>
    <string name="outro">Outro</string>
    <string name="categoria">Categoria</string>
    <string name="title_activity_reclamacoes2">ReclamacoesActivity2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_reclamacao2">ReclamacaoActivity2</string>
    <string name="resolvidos">Resolvidos</string>
    <string name="arquivados">Arquivados</string>
    <string name="detalhes">Detalhes</string>
    <string name="reclamacoes">Reclamações</string>
    <string name="novoUsuario">Novo Usuário</string>
    <string name="adicionarReclamacao">Adicionar Reclamação</string>
    <string name="home">Home</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="reolveai">reolveai</string>
    <string name="comentarios">Comentários</string>
    <string name="descricao">Descrição</string>
    <string name="nome">Nome</string>
</resources>
